// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls remove when FileProgress remove button clicked 1`] = `
<FileList
  files={
    Array [
      Object {
        "name": "asdf",
      },
    ]
  }
  removeFile={[Function]}
>
  <div
    className="File-List"
  >
    <header>
      Bounty Files
       
      1
    </header>
    <div
      className="List"
    >
      <FileSelect
        file={
          Object {
            "name": "asdf",
          }
        }
        key="asdf"
        remove={[Function]}
      >
        <div
          className="FileProgress"
        >
          <p
            className="FileProgress-Name"
          >
            asdf
          </p>
          <span
            className="FileProgress-Remove"
          >
            <RemoveButton
              onClick={[Function]}
            >
              <button
                className="Remove-Button"
                onClick={[Function]}
              >
                x
              </button>
            </RemoveButton>
          </span>
        </div>
      </FileSelect>
    </div>
  </div>
</FileList>
`;

exports[`contains 3 FileProgress when 3 added 1`] = `
<div
  class="File-List"
>
  <header>
    Bounty Files 3
  </header>
  <div
    class="List"
  >
    <div
      class="FileProgress"
    >
      <p
        class="FileProgress-Name"
      >
        asdf
      </p>
      <span
        class="FileProgress-Remove"
      >
        <button
          class="Remove-Button"
        >
          x
        </button>
      </span>
    </div>
    <div
      class="FileProgress"
    >
      <p
        class="FileProgress-Name"
      >
        demo
      </p>
      <span
        class="FileProgress-Remove"
      >
        <button
          class="Remove-Button"
        >
          x
        </button>
      </span>
    </div>
    <div
      class="FileProgress"
    >
      <p
        class="FileProgress-Name"
      >
        test
      </p>
      <span
        class="FileProgress-Remove"
      >
        <button
          class="Remove-Button"
        >
          x
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  class="File-List"
>
  <header>
    Bounty Files 0
  </header>
  <div
    class="List"
  >
    
  </div>
</div>
`;
